[package]
name = "let_engine_test"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
let-engine = { path = "../let-engine/engine", features = [ "egui" ] }
hashbrown = "0.14.0"

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
