[package]
name = "let_engine_test"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
let-engine = { path = "../let-engine/let-engine", features = [ "egui", "asset_system", "zstd", "lzma", "bzip2", "deflate", "lz4", "fast-math" ] }
hashbrown = "0.14.0"

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"

