[package]
name = "let_engine_test"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
let-engine-widgets = { path = "../let-engine/widgets" }
let-engine = { path = "../let-engine/let-engine", features = [
  "egui",
  "asset_system",
  "zstd",
  "lzma",
  "bzip2",
  "deflate",
  "lz4",
  "fast-math",
] }
egui = "0.31"
[profile.dev]
panic = "unwind"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
